C4 add get wallets by user id  and add this route in swager
